hphp/test/quick/invoke.php.expectf
This is Normal
object(Normal) (0) {
}
This is Weird2
object(Weird2) (0) {
}
This is Weird3
object(Weird3) (0) {
}
closure
%ANULL
static closure
%ANULL
About to fail:

Fatal error: Function name must be a string in %s on line 26
